--- a/docker/nginx/nginx.gz.conf
+++ b/docker/nginx/nginx.gz.conf
@@ -38,7 +38,7 @@ http {
         #access_log  /var/log/nginx/host.access.log  main;
 
         location / {
-            root   /usr/share/nginx/html/sangbok; # Not sure if this is correct, but it works.
+            root   /usr/share/nginx/html/sangbok/;
             index  index.html index.htm;
 
             # I expect most clients to support gzip encoding, hence we can store the static files gzip-compressed
@@ -63,8 +63,7 @@ http {
             # Likely, people will use this page for about 3h at a time, so setting the expires to anything less than
             # 3h does not prevent the browser from e.g. requesting non-existent script chunks or sheet music svgs.
             # Just make sure to update the site in the middle of the night instead.
-            location ~* /index.html {
-                internal;
+            location ~* index.html$ {
                 expires 4h;
 
                 # CSP. Only allows scripts directly from the server, and inline scripts with the listed hashes. (Makes XSS/JS injection harder).
