--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "sangbok",
-  "version": "1.2.0-beta4",
+  "version": "1.2.0-beta5",
   "private": true,
   "scripts": {
     "start": "vue-cli-service serve",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --modern",
     "lint": "vue-cli-service lint",
     "test": "vue-cli-service test:unit"
@@ -22,40 +23,38 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.15.0",
-    "@types/jest": "26.x",
+    "@types/jest": "^27.5.2",
     "@types/jest-expect-message": "^1.0.3",
     "@types/qrcode": "^1.4.1",
-    "@types/serviceworker-webpack-plugin": "^1.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
     "@vue/babel-plugin-jsx": "^1.1.1",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "4.x",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "^2.0.0-rc.16",
-    "babel-jest": "26.x",
-    "codecov": "^3.8.3",
-    "eslint": "^6.7.2",
+    "@vue/cli-plugin-babel": "^5.0.4",
+    "@vue/cli-plugin-eslint": "^5.0.4",
+    "@vue/cli-plugin-router": "^5.0.4",
+    "@vue/cli-plugin-typescript": "^5.0.4",
+    "@vue/cli-plugin-unit-jest": "^5.0.4",
+    "@vue/cli-plugin-vuex": "^5.0.4",
+    "@vue/cli-service": "^5.0.4",
+    "@vue/compiler-sfc": "^3.2.36",
+    "@vue/eslint-config-standard": "^7.0.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "@vue/test-utils": "^2.0.0",
+    "@vue/vue3-jest": "^27.0.0",
+    "babel-jest": "^27.5.1",
+    "eslint": "^8.16.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^7.0.0",
-    "jest": "26.x",
+    "eslint-plugin-vue": "^8.7.1",
+    "jest": "^27.5.1",
     "jest-expect-message": "^1.0.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "serviceworker-webpack-plugin": "^1.0.1",
-    "ts-jest": "26.x",
-    "typescript": ">=3.8",
-    "vue-jest": "^5.0.0-alpha.1",
+    "serviceworker-webpack5-plugin": "^2.0.0",
+    "ts-jest": "^27.1.5",
+    "typescript": "^4.7.3",
     "workbox-expiration": "^6.5.3",
     "workbox-precaching": "^6.5.3",
     "workbox-routing": "^6.5.3",
@@ -69,7 +68,7 @@
   "jest": {
     "preset": "@vue/cli-plugin-unit-jest/presets/typescript-and-babel",
     "transform": {
-      "^.+\\.vue$": "vue-jest"
+      "^.+\\.vue$": "@vue/vue3-jest"
     },
     "transformIgnorePatterns": [
       "node_modules/(?!@ngrx|(?!deck.gl)|ng-dynamic)",
