--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -42,7 +42,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [16.x]
+        node-version: [16.x, 18.x]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -64,7 +64,7 @@ jobs:
       run: npx vue-cli-service build
     - name: Archive production artifacts
       uses: actions/upload-artifact@v2
-      if: ${{ matrix.node-version == '16.x' }}
+      if: ${{ matrix.node-version == '18.x' }}
       with:
         name: dist-node-${{ matrix.node-version }}
         path: |
