--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -19,12 +19,16 @@ jobs:
   test:
     runs-on: ubuntu-latest
     name: Run tests (Vue/Jest)
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [16.x, 18.x]
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js 16.x
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
-        node-version: 16.x
+        node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Install packages
       run: npm ci
