Minor deployment improvements.

--- a/docker/nginx/nginx.gz-br.conf
+++ b/docker/nginx/nginx.gz-br.conf
@@ -38,6 +38,10 @@ http {
         #access_log  /var/log/nginx/host.access.log  main;
 
         location / {
+            rewrite ^/sangbok$ sangbok/ redirect; 
+        }
+        
+        location /sangbok/ {
             root   /usr/share/nginx/html/sangbok/; # Not sure if this is correct, but it works.
             index  index.html index.htm;
 
