--- a/docker/nginx/nginx.gz.conf
+++ b/docker/nginx/nginx.gz.conf
@@ -38,6 +38,10 @@ http {
         #access_log  /var/log/nginx/host.access.log  main;
 
         location / {
+            rewrite ^/sangbok$ sangbok/ redirect; 
+        }
+
+        location /sangbok/ {
             root   /usr/share/nginx/html/sangbok/;
             index  index.html index.htm;
 
