Server configuration changes.

--- a/docker/nginx/nginx.gz-br.conf
+++ b/docker/nginx/nginx.gz-br.conf
@@ -38,12 +38,9 @@ http {
         #access_log  /var/log/nginx/host.access.log  main;
 
         location / {
-            rewrite ^/sangbok$ sangbok/ redirect; 
-        }
-        
-        location /sangbok/ {
-            root   /usr/share/nginx/html/sangbok/; # Not sure if this is correct, but it works.
+            root   /usr/share/nginx/html/; # Not sure if this is correct, but it works.
             index  index.html index.htm;
+            rewrite ^/sangbok$ sangbok/ redirect; 
 
             # I expect most clients to support gzip encoding, hence we can store the static files gzip-compressed
             # and decompress dynamically if the client does not support it.
