Minor cache config updates

--- a/docker/nginx/nginx.gz-br.conf
+++ b/docker/nginx/nginx.gz-br.conf
@@ -79,6 +79,9 @@ http {
             location ~* \.(?:css|js|min\.svg)$ {expires 1M;}
             location ~* /msvg/.*/\.svg$ {expires 1M;}
 
+            # Non-hashed files
+            location ~* \.(?:png|gif|jpg|svg)$ {expires 3d;}
+
             ##
             ## Misc. headers (security)
             ##
