--- a/docker/nginx/nginx.gz.conf
+++ b/docker/nginx/nginx.gz.conf
@@ -78,6 +78,9 @@ http {
             # since if they have, they will have a different name.
             location ~* \.(?:css|js|min\.svg)$ {expires 1M;}
             location ~* /msvg/.*/\.svg$ {expires 1M;}
+            
+            # Non-hashed files
+            location ~* \.(?:png|gif|jpg|svg)$ {expires 3d;}
 
             ##
             ## Misc. headers (security)
