Minor deploy configuration changes

--- a/docker/nginx/nginx.gz.conf
+++ b/docker/nginx/nginx.gz.conf
@@ -83,12 +83,15 @@ http {
             location ~* \.(?:png|gif|jpg|svg)$ {expires 3d;}
 
             ##
-            ## Misc. headers (security)
+            ## Misc. headers
             ##
             add_header X-Frame-Options SAMEORIGIN;
             add_header X-Content-Type-Options nosniff;
             # add_header Content-Security-Policy "script-src 'self' 'sha256-4RS22DYeB7U14dra4KcQYxmwt5HkOInieXK1NUMBmQI='; font-src 'self' fonts.gstatic.com; media-src 'self';";
             # add_header Strict-Transport-Security max-age=14400;
+            
+            # Add utf-8 to the content-type header
+            charset utf-8;
         }
 
 
