--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "sangbok",
-  "version": "1.2.0-beta6",
+  "version": "1.2.0-beta7",
   "private": true,
   "scripts": {
-    "start": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --modern",
     "lint": "vue-cli-service lint",
+    "start": "vue-cli-service serve",
     "test": "vue-cli-service test:unit"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "fuse.js": "^6.4.6",
     "jszip": "^3.7.1",
     "qrcode": "^1.4.4",
+    "register-service-worker": "^1.7.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue3-touch-events": "^4.1.0",
@@ -31,6 +32,7 @@
     "@vue/babel-plugin-jsx": "^1.1.1",
     "@vue/cli-plugin-babel": "^5.0.4",
     "@vue/cli-plugin-eslint": "^5.0.4",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "^5.0.4",
     "@vue/cli-plugin-typescript": "^5.0.4",
     "@vue/cli-plugin-unit-jest": "^5.0.4",
@@ -52,13 +54,8 @@
     "jest-expect-message": "^1.0.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "serviceworker-webpack5-plugin": "^2.0.0",
     "ts-jest": "^27.1.5",
-    "typescript": "^4.7.3",
-    "workbox-expiration": "^6.5.3",
-    "workbox-precaching": "^6.5.3",
-    "workbox-routing": "^6.5.3",
-    "workbox-strategies": "^6.5.3"
+    "typescript": "^4.7.3"
   },
   "browserslist": [
     "> 1%",
