--- a/package.json
+++ b/package.json
@@ -55,7 +55,11 @@
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "ts-jest": "^27.1.5",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "workbox-expiration": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4"
   },
   "browserslist": [
     "> 1%",
