--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sangbok",
-  "version": "1.2.0-beta7",
+  "version": "1.2.0-beta8",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -37,23 +37,22 @@
     "@vue/cli-plugin-typescript": "^5.0.4",
     "@vue/cli-plugin-unit-jest": "^5.0.4",
     "@vue/cli-plugin-vuex": "^5.0.4",
-    "@vue/cli-service": "^5.0.4",
+    "@vue/cli-service": "5.x",
     "@vue/compiler-sfc": "^3.2.36",
-    "@vue/eslint-config-standard": "^7.0.0",
-    "@vue/eslint-config-typescript": "^10.0.0",
+    "@vue/eslint-config-standard": "8.x",
+    "@vue/eslint-config-typescript": "11.x",
     "@vue/test-utils": "^2.0.0",
     "@vue/vue3-jest": "^27.0.0",
     "babel-jest": "^27.5.1",
-    "eslint": "^8.16.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^8.7.1",
+    "eslint": "8.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-node": "11.x",
+    "eslint-plugin-promise": "6.x",
+    "eslint-plugin-vue": "9.x",
     "jest": "^27.5.1",
     "jest-expect-message": "^1.0.2",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "13.x",
     "ts-jest": "^27.1.5",
     "typescript": "^4.7.3",
     "workbox-expiration": "^6.5.4",
