--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -39,7 +39,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [18.x]
+        node-version: [18.x, 20.x]
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
@@ -61,7 +61,7 @@ jobs:
       run: npx vue-cli-service build
     - name: Archive production artifacts
       uses: actions/upload-artifact@v3
-      if: ${{ matrix.node-version == '18.x' }}
+      if: ${{ matrix.node-version == '20.x' }}
       with:
         name: dist-node-${{ matrix.node-version }}
         path: |
@@ -75,10 +75,10 @@ jobs:
     name: Generate sheet music resources
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js 18.x
+    - name: Use Node.js 20.x
       uses: actions/setup-node@v3
       with:
-        node-version: 18.x
+        node-version: 20.x
         cache: 'npm'
     - name: Install svgo
       run: npm install -g svgo
