--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -39,7 +39,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [20.x, 18.x]
+        node-version: [20.x]
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
@@ -120,6 +120,7 @@ jobs:
           git commit -m "Automatic msvg cache update ($(head -c 8 music/mscz.sha1))" --author "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>" | exit 0
           git push
       if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/actions-dev' }}
+    # TODO: git commit exit codes are overridden above. This is most commonly done to prevent the workflow from crashing due to empty commits. It may, however, be a source of bugs if git commit crashes for some other reason.
   
   ##
   ## Docker build
