--- a/docker/nginx/nginx.gz-br.conf
+++ b/docker/nginx/nginx.gz-br.conf
@@ -76,11 +76,12 @@ http {
 
             # These files have hashed filenames, hence there's no need to ask the server if they have changed
             # since if they have, they will have a different name.
-            location ~* \.(?:css|js|min\.svg)$ {expires 1M;}
-            location ~* /msvg/.*/\.svg$ {expires 1M;}
+            location ~* \.(?:css|js|min\.svg)$ {expires 1M;} # Generic assets
+            location ~* /msvg/.*/\.svg$ {expires 1M;} # Sheet music
 
             # Non-hashed files
-            location ~* \.(?:png|gif|jpg|svg)$ {expires 3d;}
+            location ~* \.(?:png|gif|jpg|svg)$ {expires 3d;} # Images
+            location ~* \.woff2$ {expires 3M;} # Fonts
 
             ##
             ## Misc. headers
