--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -21,6 +21,7 @@ on:
       - '**/build-vue.yml'
   pull_request:
     branches: [ main, dev ]
+  workflow_dispatch:
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -41,9 +42,9 @@ jobs:
       matrix:
         node-version: [20.x]
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
@@ -162,7 +163,7 @@ jobs:
       # Login against a Docker registry except on PR(https://github.com/docker/login-action)
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -170,7 +171,7 @@ jobs:
       # Extract metadata (tags, labels) for Docker (https://github.com/docker/metadata-action)
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: | 
@@ -180,7 +181,7 @@ jobs:
           flavor: |
             suffix=${{ matrix.suffix }}
       - name: Build and push Docker image (${{ matrix.server }} with ${{ matrix.compression }} precompression)
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           file: docker/${{ matrix.server }}/${{ matrix.variant }}.Dockerfile
           context: .
