--- a/docker/nginx/nginx.gz-br.conf
+++ b/docker/nginx/nginx.gz-br.conf
@@ -67,10 +67,8 @@ http {
             location ~* /index.html {
                 expires 4h;
 
-                # CSP. Only allows scripts directly from the server, and inline scripts with the listed hashes. (Makes XSS/JS injection harder).
-                # Unsafe-eval is used by webpack. We should not be using it.
-                # Unsafe-inline is a fallback, and is only used by browsers that don't support unsafe-hashes.
-                add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'sha256-4RS22DYeB7U14dra4KcQYxmwt5HkOInieXK1NUMBmQI=' 'unsafe-inline'; font-src 'self' fonts.gstatic.com; media-src 'self'; object-src 'none';";
+                # CSP. Only allows scripts directly from the server. (Makes XSS/JS injection harder).
+                add_header Content-Security-Policy "script-src 'self'; font-src 'self' fonts.gstatic.com; media-src 'self'; object-src 'none';";
             }
             location ~* /favicon\.ico {expires 14d;}
 
