--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -12,13 +12,13 @@ on:
       - '**.js'
       - '**.jsx'
       - '**.json'
-      - '**/jest.yml'
+      - '**/vitest.yml'
   pull_request:
     branches: [ main, dev ]
 jobs:
   test:
     runs-on: ubuntu-latest
-    name: Run tests (Vue/Jest)
+    name: Run tests (Vue/Vitest)
     strategy:
       fail-fast: false
       matrix:
@@ -36,4 +36,4 @@ jobs:
       run: rm -rf svg && tar -xJf svg.tar.lzma && ./convert.sh --no-generate
       working-directory: ./music
     - name: Run tests
-      run: npx jest --ci --coverage; npx codecov
+      run: npx vitest --coverage; npx codecov
