--- a/package.json
+++ b/package.json
@@ -1,59 +1,49 @@
 {
   "name": "sangbok",
-  "version": "1.2.0-beta9",
+  "version": "1.2.0-beta10",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "start": "vue-cli-service serve",
-    "test": "vue-cli-service test:unit"
+    "build": "vite build",
+    "dev": "vite",
+    "lint": "eslint --ext .js,.ts,.jsx,.tsx,.vue --ignore-path .gitignore --fix src",
+    "lint-fix": "eslint --ext .js,.ts,.jsx,.tsx,.vue --ignore-path .gitignore --fix src",
+    "lint-check": "eslint --ext .js,.ts,.jsx,.tsx,.vue --ignore-path .gitignore src",
+    "lint-check-strict": "eslint --ext .js,.ts,.jsx,.tsx,.vue --ignore-path .gitignore --max-warnings 0 src",
+    "serve": "vite preview",
+    "start": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.6.5",
-    "fuse.js": "^6.4.6",
-    "jszip": "^3.7.1",
-    "qrcode": "^1.4.4",
+    "fuse.js": "^6.0",
+    "jszip": "^3.0",
+    "qrcode": "^1.5",
     "register-service-worker": "^1.7.2",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
+    "vue": "^3.4.10",
+    "vue-router": "^4.0.0",
     "vue3-touch-events": "^4.1.0",
-    "vuex": "^4.0.0-0",
+    "vuex": "^4.0",
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.15.0",
-    "@types/jest": "^27.5.2",
-    "@types/jest-expect-message": "^1.0.3",
-    "@types/qrcode": "^1.4.1",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "@vue/babel-plugin-jsx": "^1.1.1",
-    "@vue/cli-plugin-babel": "^5.0.4",
-    "@vue/cli-plugin-eslint": "^5.0.4",
-    "@vue/cli-plugin-router": "^5.0.4",
-    "@vue/cli-plugin-typescript": "^5.0.4",
-    "@vue/cli-plugin-unit-jest": "^5.0.4",
-    "@vue/cli-plugin-vuex": "^5.0.4",
-    "@vue/cli-service": "5.x",
-    "@vue/compiler-sfc": "^3.2.36",
+    "@types/qrcode": "1.x",
+    "@typescript-eslint/eslint-plugin": "5.x",
+    "@typescript-eslint/parser": "5.x",
+    "@vitejs/plugin-vue": "5.x",
+    "@vitejs/plugin-vue-jsx": "3.x",
+    "@vitest/coverage-v8": "^1.3.1",
     "@vue/eslint-config-standard": "8.x",
     "@vue/eslint-config-typescript": "11.x",
-    "@vue/test-utils": "^2.0.0",
-    "@vue/vue3-jest": "^27.0.0",
-    "babel-jest": "^27.5.1",
+    "@vue/test-utils": "^2.4.1",
     "eslint": "8.x",
-    "eslint-plugin-import": "2.x",
-    "eslint-plugin-node": "11.x",
-    "eslint-plugin-promise": "6.x",
-    "eslint-plugin-vue": "9.x",
-    "jest": "^27.5.1",
-    "jest-expect-message": "^1.0.2",
-    "sass": "^1.26.5",
-    "sass-loader": "13.x",
-    "ts-jest": "^27.1.5",
-    "typescript": "^4.7.3",
+    "eslint-plugin-import": "^2.0",
+    "eslint-plugin-node": "^11.0",
+    "eslint-plugin-promise": "^6.0",
+    "eslint-plugin-vue": "^9.0",
+    "jsdom": "^24.0.0",
+    "vite": "^5.1.3",
+    "vitest": "^1.3.1",
     "workbox-expiration": "^6.5.4",
     "workbox-precaching": "^6.5.4",
     "workbox-routing": "^6.5.4",
@@ -63,32 +53,5 @@
     "> 1%",
     "last 5 versions",
     "not dead"
-  ],
-  "jest": {
-    "preset": "@vue/cli-plugin-unit-jest/presets/typescript-and-babel",
-    "transform": {
-      "^.+\\.vue$": "@vue/vue3-jest"
-    },
-    "transformIgnorePatterns": [
-      "node_modules/(?!@ngrx|(?!deck.gl)|ng-dynamic)",
-      "node_modules/(?!vue3-touch-events)"
-    ],
-    "testMatch": [
-      "**/*.test.[jt]s?(x)"
-    ],
-    "moduleFileExtensions": [
-      "vue",
-      "js",
-      "json",
-      "jsx",
-      "ts",
-      "tsx",
-      "node"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/utils/dummy.ts",
-      "\\.(css|less)$": "<rootDir>/src/utils/dummy.ts",
-      "^@/(.*)$": "<rootDir>/src/$1"
-    }
-  }
+  ]
 }
