Fixed a precompression bug for the default Docker image.
Vite now places js files in /assets/, not /js/. This change is now reflected in the default Dockerfile.

--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -17,6 +17,7 @@ on:
       - '**.conf'
       - '**.go'
       - 'Dockerfile'
+      - '*.Dockerfile'
       - '.Dockerignore'
       - '**/build-vue.yml'
   pull_request:
