--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-promise": "^6.0",
     "eslint-plugin-vue": "^9.0",
     "jsdom": "^24.0.0",
+    "sass": "^1.74.1",
     "vite": "^5.1.3",
     "vitest": "^1.3.1",
     "workbox-expiration": "^6.5.4",
