--- a/docker/nginx/nginx.gz.conf
+++ b/docker/nginx/nginx.gz.conf
@@ -46,14 +46,14 @@ http {
             # and decompress dynamically if the client does not support it.
             # See https://blog.llandsmeer.com/tech/2019/08/29/precompression.html
             gzip on;
-            gzip_types text/plain text/xml application/xml application/javascript text/css image/svg+xml image/x-icon; # text/html is enabled by default, so we don't need to enable it explicitly
+            gzip_types text/plain text/vnd.abc text/xml application/xml application/javascript text/css image/svg+xml image/x-icon; # text/html is enabled by default, so we don't need to enable it explicitly
             gzip_static always;
             gzip_vary on;
             gunzip on;
 
             # We support dynamic brotli-re-encoding, but not precompression.
             brotli on;
-            brotli_types text/plain text/xml application/xml application/javascript text/css image/svg+xml image/x-icon;
+            brotli_types text/plain text/vnd.abc text/xml application/xml application/javascript text/css image/svg+xml image/x-icon;
             brotli_static off; # We only store gzip:s, not br:s, hence we only use dynamic brotli re-encoding, not pre-compression.
 
             ##
@@ -75,7 +75,10 @@ http {
             # These files have hashed filenames, hence there's no need to ask the server if they have changed
             # since if they have, they will have a different name.
             location ~* \.(?:css|js|min\.svg)$ {expires 1M;} # Generic assets
-            location ~* /msvg/.*/\.svg$ {expires 1M;} # Sheet music
+            location ~* /abc/.*/\.abc$ {
+                expires 1M;
+                charset UTF-8; # The charset for xml2abc.py exported files is UTF-8. Requires ngx_http_charset_module, which may not be present in the docker images.
+            } # Sheet music
 
             # Non-hashed files
             location ~* \.(?:png|gif|jpg|svg)$ {expires 3d;} # Images
@@ -86,7 +89,7 @@ http {
             ##
             add_header X-Frame-Options SAMEORIGIN;
             add_header X-Content-Type-Options nosniff;
-            # add_header Content-Security-Policy "script-src 'self' 'sha256-4RS22DYeB7U14dra4KcQYxmwt5HkOInieXK1NUMBmQI='; font-src 'self' fonts.gstatic.com; media-src 'self';";
+            add_header Content-Security-Policy "script-src 'self'; font-src 'self' fonts.gstatic.com; media-src 'self';";
             # add_header Strict-Transport-Security max-age=14400;
             
             # Add utf-8 to the content-type header
